# json-rpc

./: .gitmodules  CMakeLists.txt
src/: server.cpp
